[package]
name = "rtee"
version = "0.2.3"
authors = ["Gary Pennington <garypen@gmail.com>"]
description = "tee, but rustee"
license = "MIT OR Apache-2.0"
repository = "https://github.com/garypen/rtee"
readme = "README.md"
keywords = ["io"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]

clap = { version = "3.2.20", features = ["cargo"] }
nix = "0.20.2"
