[package]
name = "rtee"
version = "0.2.3"
authors = ["Gary Pennington <garypen@gmail.com>"]
description = "tee, but rustee"
license = "MIT OR Apache-2.0"
repository = "https://github.com/garypen/rtee"
readme = "README.md"
keywords = ["io"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]

clap = { version = "4.5.4", features = ["cargo"] }
nix = { version = "0.29.0", features = ["signal"] }
